--- a/paper_crawl.ipynb
+++ b/paper_crawl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,8 @@
     "'Object Recognition',\n",
     "'Domain adaptation',\n",
     "'Image generation',\n",
-    "'Data augmentation (Image augmentation)',\n",
+    "'Image Captioning',\n",
+    "'Image augmentation',\n",
     "'Pose estimation',\n",
     "'Autonomous vehicles',\n",
     "'Denoising',\n",
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 21/21 [01:24<00:00,  4.05s/it]\n"
+      "100%|██████████| 22/22 [12:59<00:00, 35.44s/it]\n"
      ]
     }
    ],
@@ -68,9 +69,9 @@
     "    area_raw = []\n",
     "    for ii in range(total_paper//20):\n",
     "        params = {\n",
-    "        'api_key': '24a5ee79fec15b3de7db738f3b8c3bf6a869c127f2db55f8109723c8007b1798',\n",
+    "        'api_key': '9cdc23221a6d7cce098cebc84adb8ab98cb53e8870970758225b506e8cb33757',\n",
     "        'engine': 'google_scholar',\n",
-    "        'q': 'Semantic Segmentation',\n",
+    "        'q': f'{area}',\n",
     "        'hl': 'en',\n",
     "        'as_ylo': '2000',\n",
     "        'num': '20',\n",
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,10 +94,10 @@
     "    for rank, paper in enumerate(gs_raw[area]):\n",
     "        paper_result = {'area': area, 'rank': rank + 1}\n",
     "        for key in keys_to_extract:\n",
-    "            paper_result[key] = paper[key]\n",
+    "            paper_result[key] = paper.get(key)\n",
     "        if 'resources' in paper:\n",
     "            for resource in paper['resources']:\n",
-    "                if resource['file_format'] == 'PDF' and resource['link']:\n",
+    "                if resource.get('file_format') == 'PDF' and resource['link']:\n",
     "                    paper_result['pdf_link'] = resource['link']\n",
     "                    break\n",
     "        if 'pdf_link' not in paper_result:\n",
@@ -109,12 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "gs_df = pd.DataFrame(gs_results)\n",
-    "gs_df.to_csv('gs_results.csv', index=False)"
+    "gs_df.to_csv('./data/gs_results.csv', index=False)"
    ]
   },
   {
@@ -126,23 +127,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n"
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 21/21 [00:46<00:00,  2.21s/it]\n"
+      "100%|██████████| 22/22 [00:46<00:00,  2.10s/it]\n"
      ]
     }
    ],
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ss_df.to_csv('ss_results.csv', index=False)"
+    "ss_df.to_csv('./data/ss_results.csv', index=False)"
    ]
   },
   {
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,14 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 21/21 [06:42<00:00, 19.17s/it]\n"
+      "100%|██████████| 22/22 [08:40<00:00, 23.67s/it]\n"
      ]
     }
    ],
@@ -212,7 +213,7 @@
     "for area in tqdm(AREAS):\n",
     "    area_formated = '-'.join(area.lower().split(' '))\n",
     "    for ii in range(total_paper//10):\n",
-    "        html_raw = requests.get(f'https://paperswithcode.com/task/semantic-segmentation?page={ii+1}')\n",
+    "        html_raw = requests.get(f'https://paperswithcode.com/task/{area_formated}?page={ii+1}')\n",
     "        soup = BeautifulSoup(html_raw.text, 'html.parser')\n",
     "        paper_cards = soup.find_all('div', class_='paper-card infinite-item')\n",
     "        for jj, paper_card in enumerate(paper_cards):\n",
@@ -224,12 +225,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "pc_df = pd.DataFrame(pc_results)\n",
-    "pc_df.to_csv('pc_results.csv', index=False)"
+    "pc_df.to_csv('./data/pc_results.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "areas = pc_df['area'].unique().tolist()\n",
+    "for area in AREAS:\n",
+    "    if area not in areas:\n",
+    "        print(area)"
    ]
   }
  ],
