--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,20 +360,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for area in ARE"
+    "total_df = pd.read_csv('./data/total_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data_download_aria2.txt', 'w') as f:"
+    "for area in AREAS:\n",
+    "    area_formatted = area.lower().replace(' ', '_')\n",
+    "    if not os.path.exists(f'./data/pdf/{area_formatted}'):\n",
+    "        os.mkdir(f'./data/pdf/{area_formatted}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 11359/11359 [00:00<00:00, 30166.65it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_names = []\n",
+    "with open('data_download_aria2.txt', 'w') as f:\n",
+    "    for idx, paper in tqdm(total_df.iterrows(), total = total_df.shape[0]):\n",
+    "        area = paper['area']\n",
+    "        area_formatted = area.lower().replace(' ', '_')\n",
+    "        title = paper['title']\n",
+    "        pdf_link = paper['pdf_link']\n",
+    "        letters = [word[0] for word in title.split(' ')]\n",
+    "        file_name = ''.join(letters)\n",
+    "        file_names.append(file_name)\n",
+    "        f.write(pdf_link + '\\n')\n",
+    "        f.write(f'\\tout=./data/pdf/{area_formatted}/{file_name}.pdf\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_df['file_name'] = file_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_df.to_csv('./data/total_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PyPDF2 import PdfFileReader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 11/11359 [00:00<01:45, 107.86it/s]PdfReadWarning: Xref table not zero-indexed. ID numbers for objects will be corrected. [pdf.py:1736]\n",
+      "  1%|          | 86/11359 [00:00<01:24, 132.93it/s]PdfReadWarning: Superfluous whitespace found in object header b'1' b'0' [pdf.py:1665]\n",
+      "PdfReadWarning: Superfluous whitespace found in object header b'2' b'0' [pdf.py:1665]\n",
+      "PdfReadWarning: Superfluous whitespace found in object header b'3' b'0' [pdf.py:1665]\n",
+      "PdfReadWarning: Superfluous whitespace found in object header b'70' b'0' [pdf.py:1665]\n",
+      "PdfReadWarning: Superfluous whitespace found in object header b'75' b'0' [pdf.py:1665]\n",
+      "PdfReadWarning: Superfluous whitespace found in object header b'81' b'0' [pdf.py:1665]\n",
+      "PdfReadWarning: Superfluous whitespace found in object header b'85' b'0' [pdf.py:1665]\n",
+      "100%|██████████| 11359/11359 [00:09<00:00, 1193.90it/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('data_download_aria2.txt', 'w') as f:\n",
+    "    for idx, paper in tqdm(total_df.iterrows(), total = total_df.shape[0]):\n",
+    "        area = paper['area']\n",
+    "        area_formatted = area.lower().replace(' ', '_')\n",
+    "        title = paper['title']\n",
+    "        pdf_link = paper['pdf_link']\n",
+    "        letters = [word[0] for word in title.split(' ')]\n",
+    "        file_name = ''.join(letters)\n",
+    "        file_path = f'./data/pdf/{area_formatted}/{file_name}.pdf'\n",
+    "        if os.path.exists(file_path):\n",
+    "            bValid = True\n",
+    "            try:\n",
+    "                reader = PdfFileReader(file_path)\n",
+    "                if reader.getNumPages() < 1:  # 进一步通过页数判断。\n",
+    "                    bValid = False\n",
+    "            except:\n",
+    "                bValid = False\n",
+    "            if bValid:\n",
+    "                continue\n",
+    "            else:\n",
+    "                os.remove(file_path)\n",
+    "        f.write(pdf_link + '\\n')\n",
+    "        f.write(f'\\tout=./data/pdf/{area_formatted}/{file_name}.pdf\\n')"
    ]
   }
  ],
