--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -285,9 +285,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'total_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_4987/3439163017.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtotal_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtotal_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtotal_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pdf_link'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'total_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "total_df = total_df[total_df['pdf_link']!='']"
    ]
@@ -320,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,22 +448,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 11/11359 [00:00<01:45, 107.86it/s]PdfReadWarning: Xref table not zero-indexed. ID numbers for objects will be corrected. [pdf.py:1736]\n",
-      "  1%|          | 86/11359 [00:00<01:24, 132.93it/s]PdfReadWarning: Superfluous whitespace found in object header b'1' b'0' [pdf.py:1665]\n",
+      "  0%|          | 11/11359 [00:00<01:48, 104.23it/s]PdfReadWarning: Xref table not zero-indexed. ID numbers for objects will be corrected. [pdf.py:1736]\n",
+      "  1%|          | 83/11359 [00:00<01:39, 113.01it/s]PdfReadWarning: Superfluous whitespace found in object header b'1' b'0' [pdf.py:1665]\n",
       "PdfReadWarning: Superfluous whitespace found in object header b'2' b'0' [pdf.py:1665]\n",
       "PdfReadWarning: Superfluous whitespace found in object header b'3' b'0' [pdf.py:1665]\n",
       "PdfReadWarning: Superfluous whitespace found in object header b'70' b'0' [pdf.py:1665]\n",
       "PdfReadWarning: Superfluous whitespace found in object header b'75' b'0' [pdf.py:1665]\n",
       "PdfReadWarning: Superfluous whitespace found in object header b'81' b'0' [pdf.py:1665]\n",
       "PdfReadWarning: Superfluous whitespace found in object header b'85' b'0' [pdf.py:1665]\n",
-      "100%|██████████| 11359/11359 [00:09<00:00, 1193.90it/s] \n"
+      " 20%|█▉        | 2267/11359 [00:11<00:21, 425.33it/s]UserWarning: startxref on same line as offset [pdf.py:1709]\n",
+      "100%|██████████| 11359/11359 [00:13<00:00, 861.32it/s]  \n"
      ]
     }
    ],
@@ -477,9 +490,18 @@
     "                continue\n",
     "            else:\n",
     "                os.remove(file_path)\n",
+    "        if pdf_link.find('arxiv') != -1:\n",
+    "            continue\n",
     "        f.write(pdf_link + '\\n')\n",
     "        f.write(f'\\tout=./data/pdf/{area_formatted}/{file_name}.pdf\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
